Changes for 3.0.8rc1

New features:

Bug fixes:
..F....... [ZBX-11527] fixed displaying maintenance icon for trigger element in maps (Cemeris)
A.F....... [ZBX-11482] improved performance for getting last value of web items by limiting query results for values in last 24h; thanks to D.Spindel Ljungmark for patch (Cemeris)
.......PS. [ZBX-11630] added escaping '"', ''', '&', '<' and '>' characters in SOAP XML for VMware requests (Sergejs)
.......PS. [ZBX-11525] ensured unique value timestamps (clock, ns) from active agents and senders (dimir)
........S. [ZBX-11558] fixed removing trigger dependencies for triggers that are created from LLD prototypes (viktors)
..F....... [ZBX-11385] fixed interfaces displaying in host inventory page (Oleg, Pavel)
...G...PS. [ZBX-11101] fixed potential crash in case of failure in zbx_tls_connect() with mbed TLS (gleb)
...G...PS. [ZBX-11101] fixed compilation warnings regarding gnutls_transport_set_ptr() with GnuTLS (asaveljevs, gleb)
...G...PS. [ZBX-11101] fixed certificates with empty issuer and subject fields being rejected with OpenSSL (asaveljevs, gleb)
...G...PS. [ZBX-11101] fixed daemon behavior being affected by logging level when processing TLS connections (asaveljevs, gleb)

--------------------------------------------------------------------------------
Changes for 3.0.7

3.0.7rc2 was released as 3.0.7 without any changes

--------------------------------------------------------------------------------
Changes for 3.0.7rc2

New features:
A.F....... [ZBX-1357] updated Czech, English (United States), French, Italian, Japanese, Korean, Portuguese (Brazil), Russian, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
..F....... [ZBX-11613] fixed "Response time" graph on "Details of web scenario" page (Sasha)

--------------------------------------------------------------------------------
Changes for 3.0.7rc1

Bug fixes: