@@ -164,7 +164,7 @@ out:
 	return ret;
 }
 
-static int	calcitem_evaluate_expression(DC_ITEM *dc_item, expression_t *exp, char *error, int max_error_len)
+static int	calcitem_evaluate_expression(expression_t *exp, char *error, int max_error_len)
 {
 	const char	*__function_name = "calcitem_evaluate_expression";
 	function_t	*f = NULL;
@@ -303,7 +303,7 @@ int	get_value_calculated(DC_ITEM *dc_item, AGENT_RESULT *result)
 		goto clean;
 	}
 
-	if (SUCCEED != (ret = calcitem_evaluate_expression(dc_item, &exp, error, sizeof(error))))
+	if (SUCCEED != (ret = calcitem_evaluate_expression(&exp, error, sizeof(error))))
 	{
 		SET_MSG_RESULT(result, strdup(error));
 		goto clean;
